--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <center>
-<img src="https://cdn.rawgit.com/nips2017creativity/nips2017creativity.github.io/6a8b4bc2/assets/real_nvp.jpeg" width="95%"/>
-<i>Image credit: <a href="https://arxiv.org/abs/1605.08803">Density estimation using Real NVP</a></i>
+<img src="nips2018creativity.github.io/assets/mike_tyka1.png" width="95%"/>
+<i>Image credit: <a href="https://arxiv.org/abs/1605.08803">Portraits of Imaginary People, Mike Tyka (2017)</a></i>
         </center>
 <p></p>
 
