--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       <section id="main_content" class="inner">
         <center>
 <img src="nips2018creativity.github.io/assets/mike_tyka1.png" width="95%"/>
-<i>Image credit: <a href="https://arxiv.org/abs/1605.08803">Portraits of Imaginary People, Mike Tyka (2017)</a></i>
+<i>Image credit: Portraits of Imaginary People, Mike Tyka (2017)</i>
         </center>
 <p></p>
 
