--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,17 +12,17 @@
 {% seo %}
   </head>
 
-<meta name="description" content="NIPS 2017 Workshop on Machine Learning for Creativity and Design">
-<meta property="og:title" content="NIPS2017 ML for Creativity & Design" />
-<meta property="og:description" content="NIPS 2017 Workshop on Machine Learning for Creativity and Design" />
-<meta property="og:image" content="https://cdn.rawgit.com/nips2017creativity/nips2017creativity.github.io/6a8b4bc2/assets/real_nvp.jpeg" />
-<meta property="og:url" content="https://nips2017creativity.github.io" />
+<meta name="description" content="NIPS 2018 Workshop on Machine Learning for Creativity and Design">
+<meta property="og:title" content="NIPS2018 ML for Creativity & Design" />
+<meta property="og:description" content="NIPS 2018 Workshop on Machine Learning for Creativity and Design" />
+<meta property="og:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/mike_tyka1.png" />
+<meta property="og:url" content="https://nips2018creativity.github.io" />
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="NIPS2017 ML for Creativity & Design" />
-<meta name="twitter:description" content="NIPS 2017 Workshop on Machine Learning for Creativity and Design" />
-<meta property="og:site_name" content="NIPS2017 ML for Creativity & Design" />
-<meta name="twitter:image" content="https://cdn.rawgit.com/nips2017creativity/nips2017creativity.github.io/6a8b4bc2/assets/real_nvp.jpeg" />
+<meta name="twitter:title" content="NIPS2018 ML for Creativity & Design" />
+<meta name="twitter:description" content="NIPS 2018 Workshop on Machine Learning for Creativity and Design" />
+<meta property="og:site_name" content="NIPS2018 ML for Creativity & Design" />
+<meta name="twitter:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/mike_tyka1.png" />
 
   <body>
 
@@ -50,7 +50,7 @@
 <div class="sns">
 
   <!-- Twitter -->
-  <a href="http://twitter.com/share?url=https://goo.gl/ZB9pih&text=NIPS 2017 Workshop on Machine Learning for Creativity and Design" target="_blank" class="share-btn twitter">
+  <a href="http://twitter.com/share?url=https://goo.gl/ZB9pih&text=NIPS 2018 Workshop on Machine Learning for Creativity and Design" target="_blank" class="share-btn twitter">
       <i class="fa fa-twitter-square fa-2x"></i>
   </a>
   <!-- Google Plus -->
@@ -62,7 +62,7 @@
       <i class="fa fa-facebook-square fa-2x"></i>
   </a>
   <!-- LinkedIn -->
-  <a href="http://www.linkedin.com/shareArticle?url=https://goo.gl/ZB9pih&title=NIPS 2017 Workshop on Machine Learning for Creativity and Design&source=" target="_blank" class="share-btn linkedin">
+  <a href="http://www.linkedin.com/shareArticle?url=https://goo.gl/ZB9pih&title=NIPS 2018 Workshop on Machine Learning for Creativity and Design&source=" target="_blank" class="share-btn linkedin">
       <i class="fa fa-linkedin-square fa-2x"></i>
   </a>
 
@@ -82,7 +82,7 @@
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p>NIPS 2017 Workshop on Machine Learning for Creativity and Design, Long Beach, California, USA. Friday December 8ᵗʰ 8:00 &#8212; 18:30.</p>
+        <p>NIPS 2018 Workshop on Machine Learning for Creativity and Design, Long Beach, California, USA. Saturday December 8ᵗʰ 8:30 &#8212; 18:00.</p>
       </footer>
     </div>
 
