Added link to last year's art gallery in the image credit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       <section id="main_content" class="inner">
         <center>
 <img src="nips2018creativity.github.io/assets/mike_tyka1.png" width="95%"/>
-<i>Image credit: Portraits of Imaginary People, Mike Tyka (2017)</i>
+<i>Image credit: Mike Tyka's Portraits of Imaginary People from the <a href="http://nips4creativity.com/">NIPS 2017 creativity art gallery</a>.</i>
         </center>
 <p></p>
 
