revert banner image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,14 +15,14 @@
 <meta name="description" content="NIPS 2018 Workshop on Machine Learning for Creativity and Design">
 <meta property="og:title" content="NIPS2018 ML for Creativity & Design" />
 <meta property="og:description" content="NIPS 2018 Workshop on Machine Learning for Creativity and Design" />
-<meta property="og:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/robbie_barrat1.jpg" />
+<meta property="og:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/mike_tyka1.png" />
 <meta property="og:url" content="https://nips2018creativity.github.io" />
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="NIPS2018 ML for Creativity & Design" />
 <meta name="twitter:description" content="NIPS 2018 Workshop on Machine Learning for Creativity and Design" />
 <meta property="og:site_name" content="NIPS2018 ML for Creativity & Design" />
-<meta name="twitter:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/robbie_barrat1.jpg" />
+<meta name="twitter:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/mike_tyka1.png" />
 
   <body>
 
@@ -41,8 +41,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <center>
-<img src="nips2018creativity.github.io/assets/robbie_barrat1.jpg" width="95%"/>
-<i>Image credit: Robbie Barrat's Portrait GAN from the <a href="http://nips4creativity.com/">NIPS 2017 creativity art gallery</a>.</i>
+<img src="nips2018creativity.github.io/assets/mike_tyka1.png" width="95%"/>
+<i>Image credit: Mike Tyka's Portraits of Imaginary People from the <a href="http://nips4creativity.com/">NIPS 2017 creativity art gallery</a>.</i>
         </center>
 <p></p>
 
