fix reference to last year's location

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p>NIPS 2018 Workshop on Machine Learning for Creativity and Design, Long Beach, California, USA. Saturday December 8ᵗʰ 8:30 &#8212; 18:00.</p>
+        <p>NIPS 2018 Workshop on Machine Learning for Creativity and Design, Montreal, Canada. Saturday December 8ᵗʰ 8:30 &#8212; 18:00.</p>
       </footer>
     </div>
 
