NIPS -> NeurIPS, part 3

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,16 +12,16 @@
 {% seo %}
   </head>
 
-<meta name="description" content="NIPS 2018 Workshop on Machine Learning for Creativity and Design">
-<meta property="og:title" content="NIPS2018 ML for Creativity & Design" />
-<meta property="og:description" content="NIPS 2018 Workshop on Machine Learning for Creativity and Design" />
+<meta name="description" content="NeurIPS 2018 Workshop on Machine Learning for Creativity and Design">
+<meta property="og:title" content="NeurIPS2018 ML for Creativity & Design" />
+<meta property="og:description" content="NeurIPS 2018 Workshop on Machine Learning for Creativity and Design" />
 <meta property="og:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/mike_tyka1.png" />
 <meta property="og:url" content="https://nips2018creativity.github.io" />
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="NIPS2018 ML for Creativity & Design" />
-<meta name="twitter:description" content="NIPS 2018 Workshop on Machine Learning for Creativity and Design" />
-<meta property="og:site_name" content="NIPS2018 ML for Creativity & Design" />
+<meta name="twitter:title" content="NeurIPS2018 ML for Creativity & Design" />
+<meta name="twitter:description" content="NeurIPS 2018 Workshop on Machine Learning for Creativity and Design" />
+<meta property="og:site_name" content="NeurIPS2018 ML for Creativity & Design" />
 <meta name="twitter:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/mike_tyka1.png" />
 
   <body>
@@ -42,7 +42,7 @@
       <section id="main_content" class="inner">
         <center>
 <img src="nips2018creativity.github.io/assets/mike_tyka1.png" width="95%"/>
-<i>Image credit: Mike Tyka's Portraits of Imaginary People from the <a href="http://nips4creativity.com/">NIPS 2017 creativity art gallery</a>.</i>
+<i>Image credit: Mike Tyka's Portraits of Imaginary People from the <a href="http://nips4creativity.com/">NeurIPS 2017 creativity art gallery</a>.</i>
         </center>
 <p></p>
 
@@ -50,7 +50,7 @@
 <div class="sns">
 
   <!-- Twitter -->
-  <a href="http://twitter.com/share?url=https://goo.gl/ZB9pih&text=NIPS 2018 Workshop on Machine Learning for Creativity and Design" target="_blank" class="share-btn twitter">
+  <a href="http://twitter.com/share?url=https://goo.gl/ZB9pih&text=NeurIPS 2018 Workshop on Machine Learning for Creativity and Design" target="_blank" class="share-btn twitter">
       <i class="fa fa-twitter-square fa-2x"></i>
   </a>
   <!-- Google Plus -->
@@ -62,7 +62,7 @@
       <i class="fa fa-facebook-square fa-2x"></i>
   </a>
   <!-- LinkedIn -->
-  <a href="http://www.linkedin.com/shareArticle?url=https://goo.gl/ZB9pih&title=NIPS 2018 Workshop on Machine Learning for Creativity and Design&source=" target="_blank" class="share-btn linkedin">
+  <a href="http://www.linkedin.com/shareArticle?url=https://goo.gl/ZB9pih&title=NeurIPS 2018 Workshop on Machine Learning for Creativity and Design&source=" target="_blank" class="share-btn linkedin">
       <i class="fa fa-linkedin-square fa-2x"></i>
   </a>
 
@@ -82,7 +82,7 @@
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p>NIPS 2018 Workshop on Machine Learning for Creativity and Design, Montreal, Canada. Saturday December 8ᵗʰ 8:30 &#8212; 18:00.</p>
+        <p>NeurIPS 2018 Workshop on Machine Learning for Creativity and Design, Montreal, Canada. Saturday December 8ᵗʰ 8:30 &#8212; 18:00.</p>
       </footer>
     </div>
 
