--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        <center><a href="http://www.aiartonline.com/">NeurIPS 2018 creativity art gallery</a></center>
+        <br>
         <center>
 <img src="nips2018creativity.github.io/assets/mike_tyka1.png" width="95%"/>
 <i>Image credit: Mike Tyka's Portraits of Imaginary People from the <a href="http://nips4creativity.com/">NeurIPS 2017 creativity art gallery</a>.</i>
