--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <center><a href="http://www.aiartonline.com/">NeurIPS 2018 creativity art gallery</a></center>
+        <center><b><a href="http://www.aiartonline.com/">NeurIPS 2018 creativity art gallery</a></b></center>
         <br>
         <center>
 <img src="nips2018creativity.github.io/assets/mike_tyka1.png" width="95%"/>
