--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,14 +15,14 @@
 <meta name="description" content="NeurIPS 2018 Workshop on Machine Learning for Creativity and Design">
 <meta property="og:title" content="NeurIPS2018 ML for Creativity & Design" />
 <meta property="og:description" content="NeurIPS 2018 Workshop on Machine Learning for Creativity and Design" />
-<meta property="og:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/mike_tyka1.png" />
+<meta property="og:image" content="https://raw.githubusercontent.com/neurips2019creativity/nips2018creativity.github.io/assets/mike_tyka1.png" />
 <meta property="og:url" content="https://nips2018creativity.github.io" />
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="NeurIPS2018 ML for Creativity & Design" />
 <meta name="twitter:description" content="NeurIPS 2018 Workshop on Machine Learning for Creativity and Design" />
 <meta property="og:site_name" content="NeurIPS2018 ML for Creativity & Design" />
-<meta name="twitter:image" content="https://nips2018creativity.github.io/nips2018creativity.github.io/assets/mike_tyka1.png" />
+<meta name="twitter:image" content="https://raw.githubusercontent.com/neurips2019creativity/nips2018creativity.github.io/assets/mike_tyka1.png" />
 
   <body>
 
@@ -43,7 +43,7 @@
         <center><b><a href="http://www.aiartonline.com/">NeurIPS 2018 creativity art gallery</a></b></center>
         <br>
         <center>
-<img src="nips2018creativity.github.io/assets/mike_tyka1.png" width="95%"/>
+<img src="https://raw.githubusercontent.com/neurips2019creativity/nips2018creativity.github.io/assets/mike_tyka1.png" width="95%"/>
 <i>Image credit: Mike Tyka's Portraits of Imaginary People from the <a href="http://nips4creativity.com/">NeurIPS 2017 creativity art gallery</a>.</i>
         </center>
 <p></p>
